# PoissonReconGrid

./: .gitignore  .gitmodules  CMakeLists.txt  PoissonReconGrid.cpp  README.md  setup.py  test.ipynb
src/: poisson_bindings.cpp  poisson_utils.cpp  poisson_utils.h
test/: test.py
